--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 
 header {
   background-color: #FBFFF4;
-  height: 100%;
+  height: 10%;
   width: 100%;
 }
 
@@ -14,10 +14,34 @@ main {
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 footer {
   background-color: #DAEEEF;
-  height: 100%;
+  height: 80px;
   width: 100%;
+  flex-shrink: 3;
+}
+
+.flex-container {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
+}
+
+.item {
+  flex-basis: 100px;
+  margin: 5px;
+  background-color: #FCF2EC
+}
+
+.setWidth {
+  flex-basis: 100px;
+  flex-grow: 1;
 }
